# couchbase-crewai-workshop

./: RAG_with_Couchbase_and_CrewAI (1).ipynb  main.py  pyproject.toml
