[project]
name = "couchbase-crewai-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.108.0",
    "datasets>=3.5.0",
    "langchain-couchbase>=0.3.0",
    "langchain-openai>=0.3.12",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
